# Pathfinder

./: README.md  config.yaml  install.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: run_tests.yaml
example/: config.yaml  config2.yaml  solution.txt
src/pathfind/: configuration.py  main.py  obstacle_course.py  path_strategy.py  pathfinder.py
src/pathfinder/: configuration.py  main.py  obstacle_course.py  path_strategy.py  pathfinder.py
src/utils/: graph_factory.py  plotter.py  validation.py
tests/: config.yaml  test_end_to_end.py  test_regression.py
tests/unit/: test_invalid_inputs.py  test_obstacle_course.py  test_operating_mode.py
