[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pathfinder"
version = "0.1.0"
dependencies = [
  "numpy",
  "shapely",
  "matplotlib",
  "networkx",
  "pyyaml"
]
requires-python = ">= 3.12"
description = "A CLI tool to find the optimal path avoiding obstacles."
readme = "README.md"
classifiers = [
"Programming Language :: Python :: 3",
"Operating System :: OS Independent"
]

[project.scripts]
pathfinder = "pathfind.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pathfind"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]